# dagster-csv-to-excel

./: Compte rendu.txt  README.md  pyproject.toml
.tmp_dagster_home_nbn7rnsi/history/: runs.db
.tmp_dagster_home_nbn7rnsi/history/runs/: .db  0d118988-cb8e-4c85-95c9-cbe532f17da8.db  238b9668-5982-4853-ad4a-281abf2c0210.db  68b955be-9da0-49d2-afb2-9fa0938302db.db  9107e7ef-61e9-4ba1-a75a-5e6168b29e64.db  c630e38f-4c66-490c-8669-751e53c1b810.db  index.db
.tmp_dagster_home_nbn7rnsi/schedules/: schedules.db
.tmp_dagster_home_nbn7rnsi/storage/: convert_all_csvs  htsdata_excel
Fichier CSV/: htsdata (41 to 70).csv
csv_to_excel_project/: __init__.py  assets.py
csv_to_excel_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
csv_to_excel_project/data/inputs/: bad_data.csv
csv_to_excel_project/data/outputs/: htsdata (41 to 70).xlsx  htsdata_converti.xlsx
